Fix scrollbar and naming convention discrepancies

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -14,7 +14,7 @@
   display: flex; 
   flex-direction: column;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: #eccdc166;
   border: 3px solid #eccdc1;
   border-radius: 25px;
@@ -36,6 +36,23 @@
   text-align: center;
 }
 
+.piece-in-cart {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1%;
+}
+
+.piece-in-cart > img {
+  width: 80%;
+}
+
+.remove-cart-button {
+  background: none;
+  border: none;
+}
+
 .cart-button {
   border: none;
   padding: 8px;
@@ -53,15 +70,17 @@
 }
 
 .cart-pieces::-webkit-scrollbar {
-  width: 10%
+  width: 10px;
 }
 
-.cart-pieces::-webkit-scrollbar-track {
-  color: pink;
-}
+
+/* .cart-pieces::-webkit-scrollbar-track {
+  background: pink;
+} */
 
 .cart-pieces::-webkit-scrollbar-thumb {
-  color: red;
+  background: pink;
+  border-radius: 25px;
 }
 
 .cart-pieces > img {
